pod-security-vpol/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-privilege-escalation
  annotations:
    policies.kyverno.io/title: Disallow Privilege Escalation in ValidatingPolicy
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: "1.30+"
    policies.kyverno.io/description: >-
      Privilege escalation, such as via set-user-ID or set-group-ID file mode, should not be allowed.
      This policy ensures the `allowPrivilegeEscalation` field is set to `false`.
spec:
  validationActions:
     - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["pods"]
  variables:
    - name: allContainers
      expression: >-
        object.spec.containers + 
        object.spec.?initContainers.orValue([]) + 
        object.spec.?ephemeralContainers.orValue([])
    - name: isWindowsPod
      expression: "object.spec.?os.?name.orValue('') == 'windows'"
  validations:
    - expression: >- 
        variables.isWindowsPod ||
        variables.allContainers.all(container, 
        container.?securityContext.?allowPrivilegeEscalation.orValue(true) == false)
      message: >-
        Privilege escalation is disallowed. 
        All containers must set the securityContext.allowPrivilegeEscalation field to `false`.
        Windows Pods are exempt.
